chore(WordsScene): Fix multi scrollbar

--- a/src/scenes/WordsScene/WordsScene.css
+++ b/src/scenes/WordsScene/WordsScene.css
@@ -3,15 +3,23 @@
  */
 
 .container {
-  position: absolute;
   top: 0; left: 0;
-  width: 100vw; height: calc(100vh - 3.5rem);
+  height: calc(100vh - 3.5rem);
   padding: .33rem 0 0 .33rem;
   overflow: hidden;
 }
 
 @media screen and (max-width: 750px) {
   .container {
-    overflow: scroll;
+    position: relative;
+    width: 100%;
+    overflow: initial;
+  }
+}
+
+@media screen and (min-width: 751px) {
+  .container {
+    position: absolute;
+    width: 100%;
   }
 }
